# CIF_Connect

./: .gitignore  Hhv.py  Hshs.py  Hv.py  chat.py  cif_connect_demo.db  cif_connect_demo.db-shm  cif_connect_demo.db-wal  crud_demo.py  doc_container.txt  fix_indent.py  flet_colors.txt  ft_cols.json  generate.py  generate_pseudo.py  gestion_bdd.db  main.py  push_route_doc.py  pyproject.toml  readme.md  requirements.txt  requirments.txt  security.py  server_client.py  test.py  test2.py  tree.txt  ttt.json  ttt.py  untitled.py  websocket_manager.py  x.py
autres/: fil_attente.py  flet_icons.txt  pyproject.toml
autres.../: client.py  hy.txt  server.py  untitled.py
database/: E.py  crud.py  initialisation.py  interactions.py  models.py  seed_messages.py  shemas.py
frontend/: main.py
frontend/views/: settings_view.py
src/: admin_view.py  big_modifs.py  chat.py  chat_view.py  colors.py  create_room_view.py  ft_cols.json  ft_cols.txt  generate_pseudo.py  login_view.py  main.py  pseudos.json  room_info_view.py  rooms_view.py  settings_view.py  test.py  untitled.py  utils.py  x.py
src/chat/: api.py  components.py  dialogs.py  models.py
views/: chat_view.py  login_view.py
